--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -13,7 +15,13 @@ android {
         versionCode 1
         versionName "1.0"
 
+        multiDexEnabled true
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    testOptions {
+        unitTests.includeAndroidResources = true
     }
 
     buildTypes {
@@ -22,15 +30,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
     buildFeatures {
-        viewBinding true
+        dataBinding = true
+        viewBinding = true
     }
 }
 
@@ -47,6 +59,74 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
     testImplementation 'junit:junit:4.+'
+    // Optional -- Robolectric environment
+    testImplementation 'androidx.test:core:1.3.0'
+    testImplementation 'org.mockito:mockito-inline:2.25.1'
+
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //DI - Dagger 2 Libraries, Apparently we can use much simpler KOIN but industry usually likes dagger
+    //so here we are
+    implementation "com.google.dagger:dagger:2.28.3"
+    kapt "com.google.dagger:dagger-compiler:2.23.2"
+    compileOnly "javax.annotation:jsr250-api:1.0"
+
+
+    kapt "com.google.dagger:dagger-compiler:2.23.2"
+    kapt "com.google.dagger:dagger-android-processor:2.23.2"
+    implementation "com.google.dagger:dagger:2.28.3"
+    implementation "com.google.dagger:dagger-android:2.35.1"
+    implementation "com.google.dagger:dagger-android-support:2.23.2"
+
+    //Android Design Support
+    implementation 'com.android.support:design:30.0.0'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
+
+    //Material Design
+    implementation "com.google.android.material:material:1.3.0"
+
+    //RX Java-Kotlin Libraries
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+    //Glide for loading images properly
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+
+    //Multidex; When application gets bigger the dex file can't support huge amoutn of functions
+    //we use multidex to basically split
+    implementation 'com.android.support:multidex:1.0.3'
+
+    //Database Libraries
+    implementation "androidx.room:room-rxjava2:2.3.0"
+    implementation "androidx.room:room-runtime:2.3.0"
+    kapt "androidx.room:room-compiler:2.3.0"
+    // For Java use annotationProcessor instead of kapt
+    testImplementation "androidx.room:room-testing:2.3.0"
+
+    // Networking
+    implementation "com.google.code.gson:gson:2.8.6"
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.okhttp3:okhttp:4.8.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:3.14.2"
+
+
+    //Gson
+    implementation "com.google.code.gson:gson:2.8.6"
+
+    //Lifecycle
+    implementation "android.arch.lifecycle:extensions:2.1.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
+    kapt "android.arch.lifecycle:compiler:2.1.0"
+
+    implementation 'com.amplifyframework:core:1.17.4'
+    implementation 'com.amplifyframework:aws-api:1.17.4'
+
+    implementation "androidx.activity:activity-ktx:1.3.0-alpha08"
+
+
+
 }
