--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,16 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'kotlin-android-extensions'
     id 'kotlin-kapt'
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
 
     defaultConfig {
         applicationId "au.com.flymultiverse"
         minSdkVersion 19
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -48,6 +47,9 @@ android {
 
 dependencies {
 
+    def lifecycle_version = "2.4.0-alpha03"
+    def arch_version = "2.1.0"
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
@@ -69,23 +71,23 @@ dependencies {
 
     //DI - Dagger 2 Libraries, Apparently we can use much simpler KOIN but industry usually likes dagger
     //so here we are
-    implementation "com.google.dagger:dagger:2.28.3"
+    implementation "com.google.dagger:dagger:2.35.1"
     kapt "com.google.dagger:dagger-compiler:2.23.2"
     compileOnly "javax.annotation:jsr250-api:1.0"
 
 
     kapt "com.google.dagger:dagger-compiler:2.23.2"
     kapt "com.google.dagger:dagger-android-processor:2.23.2"
-    implementation "com.google.dagger:dagger:2.28.3"
+    implementation "com.google.dagger:dagger:2.35.1"
     implementation "com.google.dagger:dagger-android:2.35.1"
     implementation "com.google.dagger:dagger-android-support:2.23.2"
 
     //Android Design Support
-    implementation 'com.android.support:design:30.0.0'
+    implementation 'com.android.support:design:31.0.0'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
 
     //Material Design
-    implementation "com.google.android.material:material:1.3.0"
+    implementation "com.google.android.material:material:1.4.0"
 
     //RX Java-Kotlin Libraries
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
@@ -109,24 +111,34 @@ dependencies {
     implementation "com.google.code.gson:gson:2.8.6"
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
-    implementation "com.squareup.okhttp3:okhttp:4.8.0"
+    implementation "com.squareup.okhttp3:okhttp:4.9.1"
     implementation "com.squareup.okhttp3:logging-interceptor:3.14.2"
 
 
     //Gson
     implementation "com.google.code.gson:gson:2.8.6"
 
-    //Lifecycle
-    implementation "android.arch.lifecycle:extensions:2.1.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
-    kapt "android.arch.lifecycle:compiler:2.1.0"
+//    //Lifecycle
+//    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+//    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
+//    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+//    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.3.1'
+//
+//    implementation "androidx.activity:activity-ktx:1.3.1"
 
-    implementation 'com.amplifyframework:core:1.17.4'
-    implementation 'com.amplifyframework:aws-api:1.17.4'
+    // ViewModel
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
+    // LiveData
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version")
+    // Lifecycles only (without ViewModel or LiveData)
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version")
 
-    implementation "androidx.activity:activity-ktx:1.3.0-alpha08"
+    // Saved state module for ViewModel
+    implementation("androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version")
 
-
+    // Annotation processor
+    kapt("androidx.lifecycle:lifecycle-compiler:$lifecycle_version")
+    // alternately - if using Java8, use the following instead of lifecycle-compiler
+    implementation("androidx.lifecycle:lifecycle-common-java8:$lifecycle_version")
 
 }
