--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="au.com.flymultiverse">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".BaseApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,6 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FlyMultiverse">
         <activity
+            android:exported="false"
             android:name=".ItemDetailHostActivity"
             android:label="@string/app_name">
             <intent-filter>
