--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FlyMultiverse">
         <activity
-            android:exported="false"
+            android:exported="true"
             android:name=".ItemDetailHostActivity"
             android:label="@string/app_name">
             <intent-filter>
